--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "react-slick": "^0.25.2",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
